--- a/src/main/webapp/WEB-INF/pages/updateUser.html
+++ b/src/main/webapp/WEB-INF/pages/updateUser.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>User Info</title>
 </head>
 <body>
